--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="col-12 col-lg-6 bg-white px-6 py-3 py-md-5 wow fadeInRight" data-wow-delay="1s" data-wow-duration="1.5s">
                     <h2 class="font-30 font-weight-bold fables-second-text-color">Kontes Robot Terbang Indonesia (KRTI)</h2>
                     <p class="fables-main-text-color text-justify font-14 my-3">
-                        KRIT (Indonesian Flying Robot Contest) is a competition in Indonesia organized by the Ministry of Education, Culture, Research, and Technology (Kemendikbudristek). This contest aims to hone students' creativity in designing, making, and controlling flying robots, such as unmanned aircraft (drones). KRTI also functions as a competition event that fosters innovation in the field of aviation technology, while supporting the development of the Indonesian aerospace industry.
+                        KRTI (Indonesian Flying Robot Contest) is a competition in Indonesia organized by the Ministry of Education, Culture, Research, and Technology (Kemendikbudristek). This contest aims to hone students' creativity in designing, making, and controlling flying robots, such as unmanned aircraft (drones). KRTI also functions as a competition event that fosters innovation in the field of aviation technology, while supporting the development of the Indonesian aerospace industry.
                     </p>
                     <div id="accordion">
                         <div class="card border-0 mb-2">
