--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                 </button>
                             </h5>
                             </div>
-                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body fables-forth-text-color text-justify font-14 py-1 py-xl-2 pl-6 pr-0">
                                 <h4>The objectives of the Indonesian Flying Robot Contest (KRTI) are as follows:</h4>
                                 <ol>
