--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <div class="col-12 col-sm-6 col-lg-3 text-justify mb-3 mb-lg-0 wow fadeInDown" data-wow-delay=".4s" data-wow-duration="1.5s">
                     <div class="division-box">
                         <a href="404.html">
-                            <img src="assets/custom/gambar/FW.png" class="attachment-large size-large wp-image-1524" alt="DIVISI KE-1" loading="lazy">
+                            <img src="assets/custom/gambar/FW.jpeg" class="attachment-large size-large wp-image-1524" alt="DIVISI KE-1" loading="lazy">
                         </a>
                         <h2 class="fables-main-text-color-1 font-18 my-2">Racing Plane</h2>
                     </div>
